--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,11 +20,10 @@
           -if @current_user
             #side.side.flex-1.anchor-left{:style=>("display:none;" unless session[:side])}=side_tag
             #side-splitter.splitter{:data=>{"toggle"=>toggle_side_url}}
-          #main.main.flex-4{:class=>"#{'with-side' if session[:side]} #{'with-help' if session[:help]}"}
-            .yield.flex
-              =title_header_tag
-              =notifications_tag
-              =yield
+          #main.main.flex-4
+            =title_header_tag
+            =notifications_tag
+            =yield
       -else
         #wrap.wrap.hbox.flex
           %table#wrap-table
@@ -33,9 +32,8 @@
                 %td#side.side{:style=>("display:none;" unless session[:side])}=side_tag
                 %td#side-splitter.splitter{:data=>{"toggle"=>toggle_side_url}}
               %td#main.main.flex-9{:class=>"#{'with-side' if session[:side]} #{'with-help' if session[:help]}"}
-                .yield.flex
-                  =title_header_tag
-                  =notifications_tag
-                  =yield
+                =title_header_tag
+                =notifications_tag
+                =yield
       -#help.help.flex-3.anchor-right{:style=>("display:none;" unless session[:help])}=help_tag
       #legals=legals_sentence
