--- a/app/views/dashboards/_general.html.haml
+++ b/app/views/dashboards/_general.html.haml
@@ -6,14 +6,13 @@
       =li_link_to tc('x_entities',:count=>@current_company.entities.size), :controller=>:entities
   
 -for menu, submenus in menus
-  .menu.mn-index
-    %h2=tl("menus.#{menu}")
+  %fieldset.mn-index
+    %legend=tl("menus.#{menu}")
     -for submenu, menuitems in submenus
-      .menu.indicator
-        %h3=tl("menus.submenus.#{submenu}")
-        %ul
-          -for menuitem in menuitems
-            =li_link_to(t("actions.#{menuitem[:controller]}.#{menuitem[:action]}"), menuitem)
+      %fieldset.mn-index-sub
+        %legend=tl("menus.submenus.#{submenu}")
+        -for menuitem in menuitems
+          =link_to(t("actions.#{menuitem[:controller]}.#{menuitem[:action]}"), menuitem)
 -# Test bug HAML
   -Use haml (>= 3.0.25) if it don't work  
   
