--- a/app/views/journals/show.html.haml
+++ b/app/views/journals/show.html.haml
@@ -1,6 +1,8 @@
 =journals_tag
 =toolbar do |t|
   -t.edit @journal
+  -t.close @journal if @journal.closable?
+  -t.repoen @journal if @journal.reopenable?
   -t.link :new, :controller=>:journal_entries, :journal_id=>@journal.id
 
 
