--- a/app/views/operations/_form.html.haml
+++ b/app/views/operations/_form.html.haml
@@ -27,14 +27,14 @@
             %th.act
         %tbody#lines=render :partial=>"operation_lines/row_form", :collection=>(@operation_lines||@operation.lines)
       =toolbar do |t|
-        -t.link :new_in_line,  :remote=>true, :url=>{:action=>:new, :controller=>:operation_lines, :direction=>:in},  :update=>:lines, :position=>:bottom
-        -t.link :new_out_line, :remote=>true, :url=>{:action=>:new, :controller=>:operation_lines, :direction=>:out}, :update=>:lines, :position=>:bottom
+        -t.link :new_in_line,  :remote=>true, :url=>{:action=>:new, :controller=>:operation_lines, :direction=>:in},  :update=>:lines, :position=>:bottom, :method=>:get
+        -t.link :new_out_line, :remote=>true, :url=>{:action=>:new, :controller=>:operation_lines, :direction=>:out}, :update=>:lines, :position=>:bottom, :method=>:get
         
     %td{:style=>"width:8px"}
 
     %td{:valign=>:top}
-      = formalize do |f|
-        - f.title :tools
+      =formalize do |f|
+        -f.title :tools
       %table.list
         %thead
           %tr
@@ -42,4 +42,4 @@
             %th.act
         %tbody#uses=render :partial=>"operation_uses/row_form", :collection=>(@operation_uses||@operation.uses)
       =toolbar do |t|
-        -t.link :new, :remote=>true, :update=>:uses, :position=>:bottom # , :url=>{:action=>:new, :controller=>:operation_uses}
+        -t.link :new, :remote=>true, :url=>{:action=>:new, :controller=>:operation_uses}, :update=>:uses, :position=>:bottom, :method=>:get
