--- a/app/views/users/_rights_form.html.haml
+++ b/app/views/users/_rights_form.html.haml
@@ -1,10 +1,5 @@
--# for controller, rights in (User.useful_rights||{}).sort{|a,b| a.to_s<=>b.to_s}
-=#puts @rights.inspect
 =formalize do |f|
-  -#for controller in menus.collect{|m| m[:name]}
-    -rights = User.useful_rights[controller]
-    -f.title tc("right_modules.#{controller}")
-  -if not @rights.nil?
+  -if @rights.is_a? Array
     -for right in User.rights_list.sort{|a,b| t("rights.#{a}")<=>t("rights.#{b}")}
       -f.field check_box_tag("rights[#{right}]", "1", @rights.include?(right.to_sym), :id=>"rights_#{right}"), content_tag(:label, t("rights.#{right}"), :for=>"rights_#{right}")
 
