Fixes bug on companies#register when a user is connected. Change dependencies in debian/control due to new package for rake
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1832 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/journals/show.html.haml
+++ b/app/views/journals/show.html.haml
@@ -2,7 +2,7 @@
 =toolbar do |t|
   -t.edit @journal
   -t.close @journal if @journal.closable?
-  -t.repoen @journal if @journal.reopenable?
+  -t.reopen @journal if @journal.reopenable?
   -t.link :new, :controller=>:journal_entries, :journal_id=>@journal.id
 
 
