--- a/app/views/incoming_deliveries/index.html.haml
+++ b/app/views/incoming_deliveries/index.html.haml
@@ -1,5 +1,4 @@
--# Eclated automatically (2011-06-08)
 =kujaku do |k|
-  -k.mode [:unconfirmed, :confirmed, :all]
+  -k.mode :unconfirmed, :confirmed, :all
 
 =list
