--- a/app/views/stock_transfers/index.html.haml
+++ b/app/views/stock_transfers/index.html.haml
@@ -1,5 +1,5 @@
-=kujaku do |s|
-  -s.mode [:all, :confirmed, :unconfirmed]
+=kujaku do |k|
+  -k.mode :all, :confirmed, :unconfirmed
 
 =toolbar do |t|
   -t.link :new
