--- a/app/views/entity_categories/show.html.haml
+++ b/app/views/entity_categories/show.html.haml
@@ -6,7 +6,7 @@
   -l.attribute :by_default
   -l.attribute :description
     
-%h2=tc :x_prices, :count=>@category_prices_count
+%h2=tc(:x_prices, :count=>@entity_category.active_prices.count)
 =toolbar do |t|
   -t.link :new, :action=>:new, :controller=>:prices, :mode=>:sales
 =list :prices
