--- a/app/views/mandates/configure.html.haml
+++ b/app/views/mandates/configure.html.haml
@@ -1,19 +1,20 @@
-=form_tag(:action=>:configure) do 
-  =auto_complete_stylesheet
-  %table.list
-    %tr
-      %th=tc(:column)
-      %th{:colspan=>2}=tc :filter
-      %th{:colspan=>2}=tc :new_value
-    -for column in [:family, :organization, :title]
-      %tr{:class=>cycle('odd', 'even')}
-        %td=tc "column_#{column}"
-        %td=select_tag     "columns[#{column}][filter]", options_for_select(@filters)
-        %td
-          =text_field_tag "columns[#{column}][search]", nil, :id=>"columns_#{column}_search"
-          .auto_complete{:id=>"columns_#{column}_search_auto_complete"}
-          =auto_complete_field("columns_#{column}_search", { :url => { :action => "auto_complete_for_mandate", :column=>column, :controller=>:interfacers} })
-        %td=check_box_tag  "columns[#{column}][update]"
-        %td=text_field_tag "columns[#{column}][new_value]"
+=form_tag({:action=>:configure}, :class=>:flex) do
+  .fields.flex
+    -#=auto_complete_stylesheet
+    %table.list
+      %tr
+        %th=tc(:column)
+        %th{:colspan=>2}=tc :filter
+        %th{:colspan=>2}=tc :new_value
+      -for column in [:family, :organization, :title]
+        %tr{:class=>cycle('odd', 'even')}
+          %td=tc "column_#{column}"
+          %td=select_tag     "columns[#{column}][filter]", options_for_select(@filters)
+          %td
+            =text_field_tag "columns[#{column}][search]", nil, :id=>"columns_#{column}_search"
+            .auto_complete{:id=>"columns_#{column}_search_auto_complete"}
+            =auto_complete_field("columns_#{column}_search", { :url => { :action => "auto_complete_for_mandate", :column=>column, :controller=>:interfacers} })
+          %td=check_box_tag  "columns[#{column}][update]"
+          %td=text_field_tag "columns[#{column}][new_value]"
   .actions
     =submit_tag tc(:validate) 
