--- a/app/views/subscriptions/_form.html.haml
+++ b/app/views/subscriptions/_form.html.haml
@@ -1,12 +1,11 @@
 -subscription_nature_id = nil
 =formalize do |f|
-  -f.error 'subscription'
+  -f.error :subscription
   -subscription_nature_id = f.field :subscription, :nature_id, :choices=>{:reflection=>:subscription_natures}, :new=>true
   -f.field :subscription, :quantity
   -#f.field :subscription, :entity_id, :choices=>:entities
-  -#f.field :subscription, :sales_invoice_id
   -#f.field :subscription, :sale_id
   -#f.field :subscription, :suspended
 =render :partial=>"coordinates_form"
-=observe_field(subscription_nature_id, :url=>{:action=>:coordinates, :mode=>:duration}, :update=>"subscription_duration", :frequency=>0.25, :with=>"nature_id", :loading=>"onLoading()", :loaded=>"onLoaded()")
+=observe_field(subscription_nature_id, :url=>{:action=>:coordinates, :mode=>:duration}, :update=>"subscription_duration", :frequency=>0.25, :with=>"nature_id", :method=>:get, :loading=>"onLoading()", :loaded=>"onLoaded()")
 
