--- a/app/views/stock_transfers/confirm_all.html.haml
+++ b/app/views/stock_transfers/confirm_all.html.haml
@@ -1,10 +1,6 @@
--if @stock_transfers.size > 0
-  =form_tag do
-    =list :confirm
-    .actions
-      =link_to tg(:previous), :action=>:index
-      =submit_tag(tc('transfer'), :action=>:undelivered_sales)
-
--else
-  %p{:style=>'text-align:center'}= tc('no_transfers')
+=form_tag do
+  =list :confirm
+  .actions
+    =link_to tg(:previous), :action=>:index
+    =submit_tag(tc('transfer'))
     
