--- a/app/views/accounts/reconciliation.html.haml
+++ b/app/views/accounts/reconciliation.html.haml
@@ -1,9 +1,2 @@
-.search
-  =form_tag({}, :method=>:get) do
-    %table
-      %tr
-        %td.crit
-          %label=tc("search")
-          =text_field_tag :key, params[:key]||session[:account_key]
-        %td.submit=submit_tag tg("search_go"), :name=>nil
+=kujaku
 =list(:reconciliation)
