--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -13,6 +13,7 @@
 =tabbox(:account) do |tb|
   -tb.tab(:journal_entry_lines) do
     =list(:journal_entry_lines)
+    -totals = @account.totals
     %table.list
       %tr.total
         %th
@@ -20,11 +21,11 @@
         %th=JournalEntry.human_attribute_name("credit")
       %tr.total
         %th=tc(:totals)
-        %td.value=number_to_accountancy(@totals[:debit])
-        %td.value=number_to_accountancy(@totals[:credit])
+        %td.value=number_to_accountancy(totals[:debit])
+        %td.value=number_to_accountancy(totals[:credit])
       %tr.total
         %th=tc(:balance)
-        %td.value=number_to_accountancy(@totals[:balance_debit])
-        %td.value=number_to_accountancy(@totals[:balance_credit])
+        %td.value=number_to_accountancy(totals[:balance_debit])
+        %td.value=number_to_accountancy(totals[:balance_credit])
   -tb.tab(:entities) do
     =list(:entities)
