Reviews production_chain's models and components
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1836 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/production_chains/_conveyor.html.haml
+++ b/app/views/production_chains/_conveyor.html.haml
@@ -1,4 +1,4 @@
--conveyor = production_chain_conveyor
+-#conveyor = production_chain_conveyor
 -unless conveyor.source_quantity.zero?
   %td
     .cell.source.quantity{:class=>("unique-tracking" if conveyor.unique_tracking)}=tl(:x_unit, :quantity=>conveyor.source_quantity, :unit=>conveyor.unit.readable_name)
