--- a/app/views/production_chains/_work_center.html.haml
+++ b/app/views/production_chains/_work_center.html.haml
@@ -1,4 +1,4 @@
--work_center = production_chain_work_center
+-#work_center = work_center
 -ic = work_center.input_conveyors
 -oc = work_center.output_conveyors
 .chain{:id=>"work_center#{work_center.id}"}
