--- a/app/views/production_chain_work_centers/play.html.haml
+++ b/app/views/production_chain_work_centers/play.html.haml
@@ -1,4 +1,4 @@
-=form_tag({}, :class=>"flex") do
+-#form_tag({}, :class=>"flex") do
   .search
     =select_tag("operation_id", options_for_select([[]]+@production_chain.operations.collect{|x| [x.name, x.id]}, params[:operation_id].to_i))
   .fields.flex
@@ -7,4 +7,4 @@
     #inputs=render :partial=>"production_chain_work_center_inputs", :object=>@production_chain_work_center
   .actions=submit_tag tl(:play)
 
-=observe_field "operation_id", :url=>{:action=>:production_chain_play, :id=>@production_chain.id}, :with=>"operation_id", :update=>:inputs, :loading=>"onLoading();", :loaded=>"onLoaded();"
+-#observe_field "operation_id", :url=>{:action=>:production_chain_play, :id=>@production_chain.id}, :with=>"operation_id", :update=>:inputs, :loading=>"onLoading();", :loaded=>"onLoaded();"
