--- a/app/assets/themes/tekyla/stylesheets/screen.css
+++ b/app/assets/themes/tekyla/stylesheets/screen.css
@@ -365,10 +365,21 @@ table.formalize tr.even td { background: #F0F8FF; }
 */
 table.formalize a.fastadd { margin: 0px 8px; }
 
+
+
+
+
+div.field { padding: 4px; }
+div.field > * { vertical-align: middle; }
+div.field label.attr { color: #555; width: 30%; display: inline-block; text-align: right; padding: 0 8px;}
+html[dir="rtl"] div.field label.attr { text-align: left; }
+div.field.mono-choice .toolbar { margin: 0 8px; }
+
+
 .form-column{ overflow: auto; padding:4px; }
 
-.rad { line-height: 17px; }
-.rad * { vertical-align: top; }
+.rad { padding: 1px 4px; }
+.rad * { vertical-align: middle; }
 
 /*.actions { text-align:center; padding:4px !important; background: #e9e9a8; border-top: 1px solid #BEBEBB; margin: 8px 0 0; }*/
 .actions { text-align:center; padding:4px !important; background: #F1F1F1; border-top: 1px solid #DDD;  margin: 0; } /* CEC  ACA*/
