Updates compatibility with formize and Ruby 1.9.2
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1841 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/stocks/_form.html.haml
+++ b/app/views/stocks/_form.html.haml
@@ -5,6 +5,9 @@
     =f.input :tracking_id, :choices=>"DEPENDS_ON.trackings", :include_blank=>true, :depends_on=>:product_id, :new=>true
     =f.input :warehouse, :new=>true
 
+=formalize do |f|
+  -f.error :stock
+
 =formize_fields
 
 
