--- a/app/assets/themes/tekyla/stylesheets/screen.css
+++ b/app/assets/themes/tekyla/stylesheets/screen.css
@@ -683,3 +683,15 @@ div.profile .md { float: right; }
 .profile span.lno { color: #0A7; }
 .profile span.cls { color: #05D; }
 .profile span.mth { color: #D50; }
+
+
+/*all the styles used by the plugin Unroll.*/
+div.unroll-choices {width: 350px; z-index: 1000; background-color: #FFF;}
+div.unroll-choices ul {border:1px solid #555; margin:0; padding:0; list-style-type:none; }
+div.unroll-choices ul li { margin:0; padding:3px; color: #000; cursor: pointer; } /*#C9D7F1*/
+div.unroll-choices ul li.selected {background-color: #C9D7F1; }
+div.unroll-choices ul strong.highlight { margin:0; padding:0; }
+/*input[data-unroll] { background: #FFF url(../images/buttons/unroll.png) no-repeat; }
+html[dir="ltr"] input[data-unroll] { background-position: right center; padding-right: 18px; }
+html[dir="rtl"] input[data-unroll] { background-position: left center; padding-left: 18px; }
+*/
