--- a/app/assets/themes/tekyla/stylesheets/screen.css
+++ b/app/assets/themes/tekyla/stylesheets/screen.css
@@ -1,23 +1,4 @@
-* {margin:0; padding:0; font-family: helvetica, arial, "Liberation Sans", sans-serif;}
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-        /*vertical-align: baseline;*/
-	background: transparent;
-}
-
+* {margin:0; padding:0; font-size: 100%; font-family: helvetica, arial, "Liberation Sans", sans-serif;}
 
 html { background: #F1F1F1;/*background: #C9D7F1;*/}
 fieldset {padding: 4px 8px 8px; margin: 1px 1px 8px; border: 1px solid #DDD;/* border:1px solid #95b0e4; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; behavior: url(/pie.htc); background: url(../images/columns.png) repeat-x top; */}
@@ -105,7 +86,7 @@ body { /*background: #C9D7F1;*/ }
 
 #loading { padding: 2px; text-align: center; }
 
-#overlay { background: #000; }
+#overlay { background: #000; zoom: 1; filter: alpha(opacity=50); opacity: 0.5; }
 #overlay.loading { background: black url(../images/ajax-loader-4.gif) center center no-repeat; }
 
 .clickable { cursor: pointer; }
@@ -486,7 +467,7 @@ html[dir="rtl"] .stepper td.step { background-position: left center; }
 
 
 .login { width:500px; margin:64px auto; /*border: 1px solid #95b0e4; background:#c9d7f1;*/ z-index: 1000; border: 5px double white; background: #c9d7f1; }
-.dialog .login { margin: 0; border-width: 4px; padding: 0 8px;}
+.ui-dialog .login { margin: 0; border-width: 4px; padding: 0 8px;}
 .login .logoban { height:80px; background: url(../../../images/ekylong.png) no-repeat center; margin: 16px 16px 8px; }
 .login h2 { color:red !important; padding: 2px; text-align:center; font-size:18px; }
 .login p { margin:8px; }
@@ -498,7 +479,7 @@ html[dir="rtl"] .login table tr td.label { text-align:left !important; }
 .login table tr td.button {text-align:center; padding:6px 6px 16px; }
 .login table.browsers tr td { padding: 8px 16px; }
 /*div.flash-error {text-align:center; color:red; font-style:italic;height:20px;padding: 16px; margin-top: 64px; }*/
-
+#nojavascript p { font-weight: bold; text-align: center; padding: 24px; color: #c00; }
 .login.register { padding:16px 0; text-align: center;}
 
 .window { padding:4px; background: #EEE; border: 1px solid #AAA; margin: 8px; }
@@ -695,3 +676,4 @@ div.unroll-choices ul strong.highlight { margin:0; padding:0; }
 html[dir="ltr"] input[data-unroll] { background-position: right center; padding-right: 18px; }
 html[dir="rtl"] input[data-unroll] { background-position: left center; padding-left: 18px; }
 */
+
