--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,15 +6,17 @@
     %link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
     =title_tag
     =theme_link_tag(@current_theme)
-    =calendar_link_tag
-    =javascript_include_tag :defaults
-    =javascript_include_tag "dyke"
-    =javascript_include_tag "list"
+    -#=calendar_link_tag
+    =javascript_include_tag :defaults, "jquery-ui"
+    -#=javascript_include_tag "dyke"
+    -#=javascript_include_tag "list"
     =javascript_include_tag "formize"
-  %body
-    -expiration = {}
-    -expiration = {"timeout"=>session[:expiration], "timeout-href"=>renew_session_url(:name=>@current_user.name)} if @current_user and session[:expiration].to_i>0
-    #body.flex{:data=>expiration, :class=>("resizable" if resizable?)}
+    =javascript_include_tag "support", "ui"
+    -#=javascript_include_tag "layout"
+  -expiration = {}
+  -expiration = {"timeout"=>session[:expiration], "timeout-href"=>renew_session_url(:name=>@current_user.name)} if @current_user and session[:expiration].to_i>0
+  %body{:data=>expiration}
+    #body.flex{:class=>("resizable" if resizable?)}
       #top=top_tag
       -if resizable?
         #wrap.wrap.hbox.flex
