--- a/app/views/myselves/statistics.html.haml
+++ b/app/views/myselves/statistics.html.haml
@@ -3,7 +3,7 @@
     %table
       %tr
         %td.crit
-          %span=tc(:manual_period, :start=>calendar_field_tag(:started_on, params[:started_on], :size=>8), :finish=>calendar_field_tag(:stopped_on, params[:stopped_on], :size=>8)).html_safe
+          %span=tc(:manual_period, :start=>date_field_tag(:started_on, params[:started_on], :size=>8), :finish=>date_field_tag(:stopped_on, params[:stopped_on], :size=>8)).html_safe
         %td=submit_tag tg(:search_go), :name=>nil
 
 
