--- a/app/views/entities/_export_condition.html.haml
+++ b/app/views/entities/_export_condition.html.haml
@@ -24,7 +24,7 @@
         %div{:id=>"conditions_#{id}_nature_#{nature.id}_detail", :style=>'display:none'}
           .param
             =check_box_tag("conditions[#{id}][#{nature.id}][use_subscribed_on]", "1", true)
-            =tc("subscriber_#{nature.nature}", :subscribed_on=>(nature.period? ? calendar_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]") : text_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]", nature.actual_number, :size=>8))).html_safe
+            =tc("subscriber_#{nature.nature}", :subscribed_on=>(nature.period? ? date_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]") : text_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]", nature.actual_number, :size=>8))).html_safe
           .param
             -for product in nature.products
               =check_box_tag("conditions[#{id}][#{nature.id}][products][#{product.id}]", "1", true, :id=>"conditions_#{id}_#{nature.id}_products_#{product.id}")
@@ -43,7 +43,7 @@
           =text_field_tag("conditions[#{id}][comparated]")
         -elsif column.type == :date
           =select_tag("conditions[#{id}][comparator]", options_for_select([["est supérieur(e) à", :gt], ["est supérieur(e) ou égal(e) à", :ge], ["est égal(e) à", :eq], ["est inférieur(e) ou égal(e) à", :le], ["est inférieur(e)", :lt]]))
-          =calendar_field_tag("conditions[#{id}][comparated]")
+          =date_field_tag("conditions[#{id}][comparated]")
         -elsif column.type == :boolean
           =select_tag("conditions[#{id}][comparator]", options_for_select([["est vrai", :is_true], ["est faux", :is_false]]))
         -else
