Take in account i18n with iso639-3 system for datepickers Continues to adapt forms

--- a/app/views/transports/_form.html.haml
+++ b/app/views/transports/_form.html.haml
@@ -2,13 +2,13 @@
 =formalize do |f|
   -f.error :transport
   -f.title :general
-  -transporter_id = f.field(:transport, :transporter_id, :choices=>{:reflection=>:waiting_transporters}, :new=>{:transporter=>1})
+  -f.field :transport, :transporter_id, :choices=>{:reflection=>:waiting_transporters}, :new=>{:transporter=>1}, "data-parameter-name"=>"transporter_id", "data-dependents"=>"#deliveries"
   -f.field :transport, :responsible_id, :choices=>{:reflection=>:employees, :include_blank=>""}, :new=>{:employed=>1}
   -f.field :transport, :reference_number
   -f.field :transport, :transport_on
   -f.field :transport, :comment, :field=>:textarea
 
 %h2=Transport.human_attribute_name(:deliveries)
-#deliveries=render :partial=>'deliveries_form'
+#deliveries{"data-refresh"=>url_for(:controller=>:transports, :action=>:new, :transport_id=>@transport.id)}=render :partial=>'deliveries_form'
 
-=observe_field(transporter_id, :update=>:deliveries, :url=>{:controller=>:transports, :action=>:new, :transport_id=>@transport.id}, :method=>:get, :with=>"transporter_id")
+-#=observe_field(transporter_id, :update=>:deliveries, :url=>{:controller=>:transports, :action=>:new, :transport_id=>@transport.id}, :method=>:get, :with=>"transporter_id")
