--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,11 +6,10 @@
     %link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
     =title_tag
     =theme_link_tag(@current_theme)
-    -#=calendar_link_tag
-    =javascript_include_tag :defaults, "jquery-ui"
+    =javascript_include_tag :defaults
     -#=javascript_include_tag "dyke"
     -#=javascript_include_tag "list"
-    =javascript_include_tag "formize"
+    =formize_include_tag
     =javascript_include_tag "support", "ui"
     -#=javascript_include_tag "layout"
   -expiration = {}
